Added pin demo